# sdl2_chess_engine

./: .clinerules  AGENTS.md  AI-coding-style.md  CMakeLists.txt  RELEASE_NOTES.md  ROADMAP.md  ai-agents.json  benchmark-progress.md
ai-prompts/: bootstrap.md  update.md
assets/: README.md
scripts/: ordo_rating.sh  run_cutechess_gauntlet.sh
src/: board.cpp  board.h  eval.cpp  eval.h  history.cpp  history.h  main.cpp  move.cpp  move.h  notation.cpp  notation.h  perft.cpp  search.cpp  search.h  uci.cpp  uci.h  ui.cpp  ui.h
